# gds-2023-gamejam-entry-authenticity

./: Cargo.toml  LICENSE  README.md  attributions.txt  index.html
assets/sprites/: chicken-Sheet-blue.aseprite  chicken-Sheet-brown.aseprite  chicken-Sheet-orange.aseprite  chicken-Sheet-purple.aseprite  chicken-Sheet-rainbow.aseprite  chicken-Sheet-red.aseprite  chicken-Sheet-yellow.aseprite  chicken-Sheet.aseprite  chicken-dead.aseprite  chicken.aseprite  cursor-shoot.aseprite  fox-dead.aseprite  shed.aseprite  smoke-2-Sheet.aseprite  smoke-2.aseprite  smoke.aseprite  wheat.aseprite
src/: ambience.rs  camera.rs  cursor.rs  help.rs  main.rs  one_shot.rs  states.rs  timed_sounds.rs  utilities.rs  world.rs
src/game_over/: mod.rs  systems.rs
src/in_game/: delayed_death_count.rs  grass.rs  hud.rs  inworld_object.rs  mod.rs  nest.rs  states.rs  timed_fox_death.rs
src/in_game/animation/: components.rs  mod.rs  resources.rs  systems.rs
src/in_game/behavior/: components.rs  mod.rs  systems.rs
src/in_game/chicken/: chicken_hunt.rs  chicken_names.txt  click.rs  components.rs  debug.rs  hover_glow.rs  info_menu.rs  kill_click.rs  mod.rs  quirk.rs  resources.rs  systems.rs
src/in_game/pause_menu/: mod.rs  systems.rs
src/in_game/player/: components.rs  mod.rs  resources.rs  systems.rs
src/in_game/static_object/: components.rs  mod.rs  resources.rs  systems.rs
src/main_menu/: mod.rs  systems.rs
