[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
rand = "0.8.5"
anyhow = "1.0" # for error handling: https://docs.rs/anyhow/latest/anyhow
inline_tweak = "1.0" # for tweaking constants at runtime in debug mode: https://docs.rs/inline_tweak/latest/inline_tweak